--- a/css/index.css
+++ b/css/index.css
@@ -1,53 +1,18 @@
-*{
-  margin: 0;
-  padding: 0;
-  font-family: "Sans-Serif";
+/* Some default element styling */
+*
+{
+ margin: 0;
+ padding: 0;
 }
-/* the header begins   */
-header{
-  position: fixed;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  align-items: center;
-  box-shadow: 0 3px 6px black;
+html,body{
+   height: 100%; 
 }
-header .logo,header nav{
-    padding: 20px;
+a{
+    text-decoration: none;
 }
-header nav .menuBtn{
-    display: none;
-}
-.logo{
-    text-transform: capitalize;
-    font-weight: 200;
-}
-/* the header ends here */
-/* the aside begins here */
-aside{
-    position: absolute;
-    display: none;
-    margin: 30px;
-    width: 90%;
-    height: 100%;
-    background-color: white;
-    box-shadow: 0 3px 6px black;
-    border-radius: 10px;
-}
-aside ul{
-    padding: 10px;
-    text-align: center;
-}
-aside ul li{
-    padding: 5px;
-}
-aside i{
-    padding: 10px;
-}
-/* the aside ends here */
-/* default tags stylings */
-ul li {
+ul li,ol li{
     list-style-type: none;
+    padding: 5px;
 }
 ol{
     display: inline;
@@ -55,15 +20,103 @@ ol{
 ol li {
     display: inline-block;
 }
-li ,.logo,.menuBtn{
-    cursor: pointer;
+.logo ,li,.menuBtn{
     text-transform: capitalize;
+    cursor: pointer;
 }
-@media screen and (max-width: 500px) {
-    header nav ol{
+img{
+    width: 100%
+}
+
+/* header begins here with the logo and menu bar */
+header{
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  box-shadow: 0 5px 10px 0 rgba(0,0,0,0.3),0 7px 21px 0 rgba(0,0,0,0.20);
+  background-color: white;
+}
+header .logo,header .menu{
+    padding: 20px 50px;
+}
+header nav .menuBtn{
+    display: none;
+}
+.logo{
+    font-family: fantasy;
+    font-weight: 200;
+}
+.top_navbars li a,.logo, header .menu,.side_navbars li a{
+    color: gray;
+}
+._searchBox {
+    width: 50%;
+}
+._searchBox input{
+    width: 80%;
+    padding: 15px;
+}
+
+/* aside begins with the side nav here */
+aside{
+    display: block;
+    z-index: 100;
+    position: fixed;
+    display: none;
+    margin: auto;
+    width: 90%;
+    height: 100%;
+    background-color: white;
+    box-shadow: 0 3px 6px gray;
+}
+aside i, aside .side_navbars,aside .logo{
+    display: block;
+    padding: 20px;
+}
+
+/* main begins here */
+main{
+    margin-top: 90px;
+}
+section{
+    display: block;
+    align-items: center;
+    padding: 30px;
+}
+.hero{
+    text-align: center;
+}
+.hero img{
+    padding: 20px 0;
+    width: 50%;
+}
+
+/* Media quries for a small screen with a max-width of 500px */
+@media screen and (max-width: 700px) {
+    header .menu .top_navbars{
         display: none;
     }
     header nav .menuBtn{
         display: block;
     }
+    header .logo,header .menu{
+        padding: 20px 50px;
+}
+    main{
+        margin-top: 70px;
+    }
+    .hero{
+    text-align: left;
+}
+    .hero img{
+    width: 100%;
+}
+._searchBox input{
+    width: 100%;
+    padding: 10px;
+}
+
+
 }
