--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,7 @@ ol{
 ol li{
     display: inline-block;
     list-style-type: none;
+    padding: 5px;
 }
 ol li a{
     color: inherit;
@@ -148,7 +149,7 @@ main{
     height: 100%;
 }
 section{
-    padding: 10px 40px;
+    padding: 30px 40px;
 }
 .section_title{
     padding: 10px 0;
