--- a/assests/css/_cards.scss
+++ b/assests/css/_cards.scss
@@ -1,59 +1,120 @@
+.card{
+  margin: 10px;
+  border-radius: 1em;
+  box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
+  .card__body {
+    padding: 10px 20px;
+  }
+  h4 {
+    font-size: 20px;
+    text-transform: capitalize;
+    padding: 5px 0;
+  }
+  .card__footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    margin-top: auto;
+  }
+}
+.our-team {
+  padding: 30px 0 40px;
+  margin-bottom: 30px;
+  background-color: #f7f5ec;
+  text-align: center;
+  overflow: hidden;
+  position: relative;
+}
 
-$banner-heading : 44px;
-@mixin banner{
-    margin: auto;
-    color: white;
-    .banner-content{
-        padding: 100px 0;
-        align-items: center;
-    }
-    span{
-      font-size: $banner-heading;
-      display: block;
-      text-transform: capitalize;
-      font-weight: bold;
-    }
-    span.title{
-        font-weight: normal;
-        margin-bottom: 30px;
-    }
+.our-team .picture {
+  display: inline-block;
+  height: 130px;
+  width: 130px;
+  margin-bottom: 50px;
+  z-index: 1;
+  position: relative;
 }
-.banner-welcome{
-    @include banner;
-    background-image: url('../images/edu.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    color: rgb(253, 0, 0);
-    .btn-group{
-        margin: 10px;
-        text-align: right;
-    }
+
+.our-team .picture::before {
+  content: "";
+  width: 100%;
+  height: 0;
+  border-radius: 50%;
+  background-color: #1369ce;
+  position: absolute;
+  bottom: 135%;
+  right: 0;
+  left: 0;
+  opacity: 0.9;
+  transform: scale(3);
+  transition: all 0.3s linear 0s;
 }
-.carousel{
-    .carousel-item{
-        margin: 5px;
-        box-shadow: 0 15px 30px rgba(0,0,0,0.30), 0 11px 8px rgba(0,0,0,0.22);
-        
-    }
+
+.our-team:hover .picture::before {
+  height: 100%;
 }
-.about-card{
-    .about-header,p{
-        padding: 20px;
-    }
-    .about-body{
-        .img{
-            text-align: center;
-            padding: 30px;
-            img{
-                width: 60%;
-                border-radius: 10px;
-            }
-        }
-        p{
-            text-align: start;
-            color:#333;
-            font-weight: 200;
-        }
-    }
+
+.our-team .picture::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #1369ce;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.our-team .picture img {
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
+  transform: scale(1);
+  transition: all 0.9s ease 0s;
+}
+
+.our-team:hover .picture img {
+  box-shadow: 0 0 0 14px #f7f5ec;
+  transform: scale(0.7);
+}
+
+.our-team .title {
+  display: block;
+  font-size: 15px;
+  color: #4e5052;
+  text-transform: capitalize;
+}
+
+.our-team .social {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: #1369ce;
+  position: absolute;
+  bottom: -100px;
+  left: 0;
+  transition: all 0.5s ease 0s;
+}
+
+.our-team:hover .social {
+  bottom: 0;
+}
+
+.our-team .social li {
+  display: inline-block;
+}
+
+.our-team .social li a {
+  display: block;
+  padding: 10px;
+  font-size: 17px;
+  color: white;
+  transition: all 0.3s ease 0s;
+  text-decoration: none;
+}
+
+.our-team .social li a:hover {
+  color: #1369ce;
+  background-color: #f7f5ec;
 }
