--- a/assests/css/_default.scss
+++ b/assests/css/_default.scss
@@ -1,32 +1,39 @@
+@import "mixins";
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 a{
     text-decoration: none;
     color: inherit;
 }
-img{
-    width: 100%;
-}
+img {
+    max-width: 100%;
+    display: block;
+    object-fit: cover;
+  }
 ul li, ol li{
     list-style-type: none;
-}
-section{
-    padding: 60px 0;
-}
-li,i{
     cursor: pointer;
 }
-p{
-    font-size: 20px;
-}
-.breadcrumb{
-    display: block;
-    background-color: azure;
-    ol{
+ol{
+    display: inline;
+    li{
         display: inline-block;
-        li{
-            display: inline-block;
-            padding: 0 5px;
-        }
     }
+}
+section{
+    padding: 50px 0;
+    .section-title{
+        font-size: 22px;
+        font-weight: bold;
+        color: midnightblue;
+        padding: 20px 0;
+    }
+}
+p{
+    font-size: 18px;
 }
 .address{
     padding: 20px 0;
@@ -34,11 +41,4 @@ p{
     address{
         padding: 10px 0;
     }
-}
-.copyright{
-    margin-top: 30px;
-    padding-top: 30px;
-    background-color: white;
-    text-align: center;
-    color: black;
 }
