--- a/assests/css/_forms.scss
+++ b/assests/css/_forms.scss
@@ -1,33 +1,16 @@
-.form {
-    margin: 20px auto;
-    padding: 25px 0;
-    .form-item {
-        padding: 5px 0;
-        align-items: center;
-        span{
-            display: block;
-            padding: 10px 0;
-            font-weight: bold;
-        }
-        input,textarea{
-         outline: none;
-         border: none;
-         padding: 10px 5px;
-         border: 1px solid lightgrey;
-         width: 90%;
-         font-size: 18px;
-        }
-    }
-}
-.form-search{
-    margin:auto;
+form{
+    margin: 0;
     width: 100%;
     input{
-        border: none;
-        border-radius:8px;
-        margin:3px auto;
-        width: 90%;
-        padding:8px 10px;
         outline: none;
+        border: none;
+        padding: 8px 10px ;
+        width: 99%;
+        &::placeholder{
+            padding-left: 10px;
+        }
+    }
+    input::placeholder{
+        padding-left: 10px;
     }
 }
