--- a/assests/css/_main.scss
+++ b/assests/css/_main.scss
@@ -1,20 +1,44 @@
+@import "mixins";
 header{
     position: fixed;
     width: 100%;
-    background-color: midnightblue;
-    color: white;
+    @include set-bg-color(midnightblue, white);
+    @include box-shadow;
     z-index: 100;
-    box-shadow: 0 15px 30px rgba(0,0,0,0.30), 0 11px 8px rgba(0,0,0,0.22);
-    .logo {  
-        display: block;
-    }
-    .navbar{
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        li{
+    nav{
+        @include d-flex;
+        .navbar-top{
+            margin: auto;
+            .nav-item{
+                text-align: center;
+                padding-left: 18px;
+            }
+        }
+        .form{
+            margin: auto;
+            width: 40%;
             text-align: center;
-            list-style-type: none;
+        }
+        input{
+            border-radius: 8px
+        }
+    }
+    @media only screen and (max-width: 420px){
+        .btn-group{
+            display: none;
+        }
+    }
+    @media only screen and (max-width: 999px){
+        nav .navbar-top{
+            display: none;
+        }
+        .btn-group{
+            margin: auto;
+        }
+    }
+    @media only screen and (min-width: 999px) {
+        nav .btn-menu{
+            display: none;
         }
     }
 }
@@ -24,53 +48,44 @@ aside{
     z-index: 100;
     width: 100%;
     height: 100%;
-    background-color: midnightblue;
-    color: white;
+    @include set-bg-color(midnightblue, white);
     .navbar{
         display: block;
         padding: 40px 0;
         li{
-            list-style-type: none;
             padding: 8px;
-            text-transform: capitalize;
+            .fa{
+                display: none;
+            }
         }
     }
 }
 main{
-    margin-top: 55px;
-    .row{
-        padding: 20px 0;
+    margin-top: 60px;
+    .hero{
+        padding: 100px 0;
+        background-image: url('../images/king.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        color: floralwhite;
+        .title,p{
+            display: block;
+            text-transform: capitalize;
+            font-size: 28px;
+        }
+        .title{
+            font-weight: bold;
+              margin-bottom: 30px;
+          }
+        .btn-group{
+            text-align: right;
+        }
     }
-    h1,h2,h3,h4,h5,h6{
-        font-weight: 300;
-        color: navy;
-    }
-}
-section{
-    padding: 40px 0;
-    h1,h2,h3,h4,h5,h6{
-        padding: 5px 0;
-        text-transform: capitalize;
-    }
-    p{
-        padding: 5px;
-    }
-    .section-title{
-        font-size: 22px;
-        font-weight: bold;
-        color: midnightblue;
-        padding: 10px 0;
-    }
+    
 }
 footer{
-    background-color: rgb(33, 33, 146);
-    color: white;
-    section{
-        padding: 20px 0;
-    }
-    .section-title{
-        color: white;
-    }
+    @include set-bg-color(midnightblue, white);
     .navbar{
         .navbar-item{
             display: block;
@@ -78,5 +93,24 @@ footer{
                 display: none;
             }
         }
+    }
+    .copyright{
+        @include set-bg-color(white, midnightblue);
+        text-align: center;
+    }
+    .section-title{
+        color: inherit;
+    }
+    .navbar{
+        .fa{
+            display: none;
+        }
+    }
+}
+.footer-body{
+    @include d-flex;
+    justify-content: space-between;
+    @media only screen and (max-width: 600px) {
+        display: block;
     }
 }
