--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -1,38 +1,45 @@
+@mixins mCq();
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
 a {
   text-decoration: none;
   color: inherit;
 }
 
 img {
-  width: 100%;
+  max-width: 100%;
+  display: block;
+  object-fit: cover;
 }
 
 ul li, ol li {
   list-style-type: none;
-}
-
-section {
-  padding: 60px 0;
-}
-
-li, i {
   cursor: pointer;
 }
 
-p {
-  font-size: 20px;
+ol {
+  display: inline;
+}
+ol li {
+  display: inline-block;
 }
 
-.breadcrumb {
-  display: block;
-  background-color: azure;
+section {
+  padding: 50px 0;
 }
-.breadcrumb ol {
-  display: inline-block;
+section .section-title {
+  font-size: 22px;
+  font-weight: bold;
+  color: midnightblue;
+  padding: 20px 0;
 }
-.breadcrumb ol li {
-  display: inline-block;
-  padding: 0 5px;
+
+p {
+  font-size: 18px;
 }
 
 .address {
@@ -43,27 +50,14 @@ p {
   padding: 10px 0;
 }
 
-.copyright {
-  margin-top: 30px;
-  padding-top: 30px;
-  background-color: white;
-  text-align: center;
-  color: black;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-
 html, body, header, aside, main, footer, div, section, article {
   box-sizing: border-box;
 }
 
 .container {
   margin: auto;
-  padding: 20px 0;
+  width: 90%;
+  padding: 25px 0;
 }
 
 .row {
@@ -82,10 +76,6 @@ html, body, header, aside, main, footer, div, section, article {
 }
 
 @media only screen and (max-width: 800px) {
-  .container {
-    width: 90%;
-  }
-
   .col-md-1 {
     width: 8.33333333%;
   }
@@ -133,27 +123,8 @@ html, body, header, aside, main, footer, div, section, article {
   .col-md-12 {
     width: 100%;
   }
-
-  header .navbar .navbar-item {
-    display: none;
-  }
-
-  aside .navbar .navbar-item {
-    display: block;
-  }
-  aside .navbar .navbar-item .fa {
-    display: none;
-  }
-
-  .btn-menu {
-    display: block;
-  }
 }
 @media only screen and (min-width: 800px) {
-  .container {
-    width: 85%;
-  }
-
   .col-lg-1 {
     width: 8.33333333%;
   }
@@ -202,70 +173,134 @@ html, body, header, aside, main, footer, div, section, article {
     width: 100%;
   }
 
-  .navbar-item {
-    display: block;
-  }
-
-  aside, header .btn-menu {
-    display: none;
-  }
-
-  .form {
+  .container {
     width: 80%;
   }
 }
-.banner-welcome {
-  margin: auto;
-  color: white;
-  background-image: url("../images/edu.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  color: #fd0000;
-}
-.banner-welcome .banner-content {
-  padding: 100px 0;
-  align-items: center;
-}
-.banner-welcome span {
-  font-size: 44px;
-  display: block;
-  text-transform: capitalize;
-  font-weight: bold;
-}
-.banner-welcome span.title {
-  font-weight: normal;
-  margin-bottom: 30px;
-}
-.banner-welcome .btn-group {
+.card {
   margin: 10px;
-  text-align: right;
+  border-radius: 1em;
+  box-shadow: 0 0.1rem 1rem rgba(0, 0, 0, 0.1);
+}
+.card .card__body {
+  padding: 10px 20px;
+}
+.card h4 {
+  font-size: 20px;
+  text-transform: capitalize;
+  padding: 5px 0;
+}
+.card .card__footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  margin-top: auto;
 }
 
-.carousel .carousel-item {
-  margin: 5px;
-  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3), 0 11px 8px rgba(0, 0, 0, 0.22);
-}
-
-.about-card .about-header, .about-card p {
-  padding: 20px;
-}
-.about-card .about-body .img {
+.our-team {
+  padding: 30px 0 40px;
+  margin-bottom: 30px;
+  background-color: #f7f5ec;
   text-align: center;
-  padding: 30px;
+  overflow: hidden;
+  position: relative;
 }
-.about-card .about-body .img img {
-  width: 60%;
-  border-radius: 10px;
+
+.our-team .picture {
+  display: inline-block;
+  height: 130px;
+  width: 130px;
+  margin-bottom: 50px;
+  z-index: 1;
+  position: relative;
 }
-.about-card .about-body p {
-  text-align: start;
-  color: #333;
-  font-weight: 200;
+
+.our-team .picture::before {
+  content: "";
+  width: 100%;
+  height: 0;
+  border-radius: 50%;
+  background-color: #1369ce;
+  position: absolute;
+  bottom: 135%;
+  right: 0;
+  left: 0;
+  opacity: 0.9;
+  transform: scale(3);
+  transition: all 0.3s linear 0s;
+}
+
+.our-team:hover .picture::before {
+  height: 100%;
+}
+
+.our-team .picture::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #1369ce;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.our-team .picture img {
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
+  transform: scale(1);
+  transition: all 0.9s ease 0s;
+}
+
+.our-team:hover .picture img {
+  box-shadow: 0 0 0 14px #f7f5ec;
+  transform: scale(0.7);
+}
+
+.our-team .title {
+  display: block;
+  font-size: 15px;
+  color: #4e5052;
+  text-transform: capitalize;
+}
+
+.our-team .social {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: #1369ce;
+  position: absolute;
+  bottom: -100px;
+  left: 0;
+  transition: all 0.5s ease 0s;
+}
+
+.our-team:hover .social {
+  bottom: 0;
+}
+
+.our-team .social li {
+  display: inline-block;
+}
+
+.our-team .social li a {
+  display: block;
+  padding: 10px;
+  font-size: 17px;
+  color: white;
+  transition: all 0.3s ease 0s;
+  text-decoration: none;
+}
+
+.our-team .social li a:hover {
+  color: #1369ce;
+  background-color: #f7f5ec;
 }
 
 .btn-group {
-  margin: 0 auto;
+  margin-left: auto;
   padding: 10px 0;
   text-align: center;
 }
@@ -274,7 +309,7 @@ html, body, header, aside, main, footer, div, section, article {
   color: white;
   text-decoration: none;
   padding: 8px 10px;
-  border-radius: 3px;
+  border-radius: 8px;
 }
 
 .btn-green {
@@ -333,6 +368,9 @@ button {
   border-radius: 3px;
 }
 
+.social-media {
+  padding: 20px 0;
+}
 .social-media ol {
   padding: 30px 0;
 }
@@ -341,60 +379,97 @@ button {
   padding: 0 3px;
 }
 
-.form {
-  margin: 20px auto;
-  padding: 25px 0;
-}
-.form .form-item {
-  padding: 5px 0;
-  align-items: center;
-}
-.form .form-item span {
-  display: block;
-  padding: 10px 0;
-  font-weight: bold;
-}
-.form .form-item input, .form .form-item textarea {
-  outline: none;
-  border: none;
-  padding: 10px 5px;
-  border: 1px solid lightgrey;
-  width: 90%;
-  font-size: 18px;
+.tag {
+  padding: 4px;
+  font-size: smaller;
+  border-radius: 8px;
 }
 
-.form-search {
-  margin: auto;
+.tag + .tag {
+  margin-left: 0.5em;
+}
+
+.tag-blue {
+  background: #56CCF2;
+  background: linear-gradient(to bottom, #2F80ED, #56CCF2);
+  color: #fafafa;
+}
+
+.tag-brown {
+  background: #D1913C;
+  background: linear-gradient(to bottom, #FFD194, #D1913C);
+  color: #fafafa;
+}
+
+.tag-red {
+  background: #cb2d3e;
+  background: linear-gradient(to bottom, #ef473a, #cb2d3e);
+  color: #fafafa;
+}
+
+form {
+  margin: 0;
   width: 100%;
 }
-.form-search input {
-  border: none;
-  border-radius: 8px;
-  margin: 3px auto;
-  width: 90%;
-  padding: 8px 10px;
+form input {
   outline: none;
+  border: none;
+  padding: 8px 10px;
+  width: 99%;
+}
+form input::placeholder {
+  padding-left: 10px;
+}
+form input::placeholder {
+  padding-left: 10px;
 }
 
+@mixins mCq();
 header {
   position: fixed;
   width: 100%;
   background-color: midnightblue;
   color: white;
-  z-index: 100;
   box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3), 0 11px 8px rgba(0, 0, 0, 0.22);
+  z-index: 100;
 }
-header .logo {
-  display: block;
-}
-header .navbar {
+header nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
 }
-header .navbar li {
+header nav .navbar-top {
+  margin: auto;
+}
+header nav .navbar-top .nav-item {
   text-align: center;
-  list-style-type: none;
+  padding-left: 18px;
+}
+header nav .form {
+  margin: auto;
+  width: 40%;
+  text-align: center;
+}
+header nav input {
+  border-radius: 8px;
+}
+@media only screen and (max-width: 420px) {
+  header .btn-group {
+    display: none;
+  }
+}
+@media only screen and (max-width: 999px) {
+  header nav .navbar-top {
+    display: none;
+  }
+  header .btn-group {
+    margin: auto;
+  }
+}
+@media only screen and (min-width: 999px) {
+  header nav .btn-menu {
+    display: none;
+  }
 }
 
 aside {
@@ -411,47 +486,38 @@ aside .navbar {
   padding: 40px 0;
 }
 aside .navbar li {
-  list-style-type: none;
   padding: 8px;
-  text-transform: capitalize;
+}
+aside .navbar li .fa {
+  display: none;
 }
 
 main {
-  margin-top: 55px;
+  margin-top: 60px;
 }
-main .row {
-  padding: 20px 0;
+main .hero {
+  padding: 100px 0;
+  background-image: url("../images/king.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  color: floralwhite;
 }
-main h1, main h2, main h3, main h4, main h5, main h6 {
-  font-weight: 300;
-  color: navy;
-}
-
-section {
-  padding: 40px 0;
-}
-section h1, section h2, section h3, section h4, section h5, section h6 {
-  padding: 5px 0;
+main .hero .title, main .hero p {
+  display: block;
   text-transform: capitalize;
+  font-size: 28px;
 }
-section p {
-  padding: 5px;
-}
-section .section-title {
-  font-size: 22px;
+main .hero .title {
   font-weight: bold;
-  color: midnightblue;
-  padding: 10px 0;
+  margin-bottom: 30px;
+}
+main .hero .btn-group {
+  text-align: right;
 }
 
 footer {
-  background-color: #212192;
-  color: white;
-}
-footer section {
-  padding: 20px 0;
-}
-footer .section-title {
+  background-color: midnightblue;
   color: white;
 }
 footer .navbar .navbar-item {
@@ -459,6 +525,29 @@ footer .navbar .navbar-item {
 }
 footer .navbar .navbar-item .fa {
   display: none;
+}
+footer .copyright {
+  background-color: white;
+  color: midnightblue;
+  text-align: center;
+}
+footer .section-title {
+  color: inherit;
+}
+footer .navbar .fa {
+  display: none;
+}
+
+.footer-body {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  justify-content: space-between;
+}
+@media only screen and (max-width: 600px) {
+  .footer-body {
+    display: block;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
