homepage, feeds and about us completed structure

--- a/assests/css/_default.scss
+++ b/assests/css/_default.scss
@@ -42,3 +42,13 @@ p{
         padding: 10px 0;
     }
 }
+.content-title{
+    padding: 15px 0;
+    color: midnightblue;
+}
+#googleMap {
+    height: 400px;
+    /* The height is 400 pixels */
+    width: 100%;
+    /* The width is the width of the web page */
+  }
