--- a/assests/css/_main.scss
+++ b/assests/css/_main.scss
@@ -109,7 +109,7 @@ footer{
 }
 .footer-body{
     @include d-flex;
-    justify-content: space-between;
+    justify-content: space-around;
     @media only screen and (max-width: 600px) {
         display: block;
     }
