--- a/assests/css/_cards.scss
+++ b/assests/css/_cards.scss
@@ -1,3 +1,4 @@
+@import "mixins";
 .card{
   margin: 10px;
   border-radius: 1em;
@@ -17,104 +18,140 @@
     margin-top: auto;
   }
 }
+
 .our-team {
   padding: 30px 0 40px;
   margin-bottom: 30px;
-  background-color: #f7f5ec;
+  background-color: white;
   text-align: center;
   overflow: hidden;
   position: relative;
+  p{
+    padding: 10px;
+    display: none;
+  }
+  .picture {
+    display: inline-block;
+    height: 130px;
+    width: 130px;
+    margin-bottom: 50px;
+    z-index: 1;
+    position: relative;
+    img {
+      width: 100%;
+      height: auto;
+      border-radius: 50%;
+      transform: scale(1);
+      transition: all 0.9s ease 0s;
+    }
+    &:before {
+      content: "";
+      width: 100%;
+      height: 0;
+      border-radius: 50%;
+      background-color: #1369ce;
+      position: absolute;
+      bottom: 135%;
+      right: 0;
+      left: 0;
+      opacity: 0.9;
+      transform: scale(3);
+      transition: all 0.3s linear 0s;
+    }
+  }
+  &:hover{
+    P{
+      display: block;
+    }
+    .picture::before{
+      height: 100%;
+    }
+    .picture::after {
+      content: "";
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      background-color: #1369ce;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
+    .picture {
+      img {
+        box-shadow: 0 0 0 14px #f7f5ec;
+        transform: scale(0.7);
+      }
+    }
+    .social {
+      bottom: 0;
+    }
+  }
+  .title {
+    display: block;
+    font-size: 15px;
+    color: #4e5052;
+    text-transform: capitalize;
+  }
+  .social {
+    width: 100%;
+    background-color: #1369ce;
+    position: absolute;
+    bottom: -100px;
+    left: 0;
+    transition: all 0.5s ease 0s;
+    li {
+      display: inline-block;
+      a {
+        display: block;
+        padding: 10px;
+        font-size: 17px;
+        color: white;
+        transition: all 0.3s ease 0s;
+        text-decoration: none;
+        &:hover {
+          @include set-bg-color(white,#1369ce);
+        }        
+      }
+    }
+  }
 }
 
-.our-team .picture {
-  display: inline-block;
-  height: 130px;
-  width: 130px;
-  margin-bottom: 50px;
-  z-index: 1;
-  position: relative;
-}
-
-.our-team .picture::before {
-  content: "";
-  width: 100%;
-  height: 0;
-  border-radius: 50%;
-  background-color: #1369ce;
-  position: absolute;
-  bottom: 135%;
-  right: 0;
-  left: 0;
-  opacity: 0.9;
-  transform: scale(3);
-  transition: all 0.3s linear 0s;
-}
-
-.our-team:hover .picture::before {
-  height: 100%;
-}
-
-.our-team .picture::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: #1369ce;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-
-.our-team .picture img {
-  width: 100%;
-  height: auto;
-  border-radius: 50%;
-  transform: scale(1);
-  transition: all 0.9s ease 0s;
-}
-
-.our-team:hover .picture img {
-  box-shadow: 0 0 0 14px #f7f5ec;
-  transform: scale(0.7);
-}
-
-.our-team .title {
-  display: block;
-  font-size: 15px;
-  color: #4e5052;
-  text-transform: capitalize;
-}
-
-.our-team .social {
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  background-color: #1369ce;
-  position: absolute;
-  bottom: -100px;
-  left: 0;
-  transition: all 0.5s ease 0s;
-}
-
-.our-team:hover .social {
-  bottom: 0;
-}
-
-.our-team .social li {
-  display: inline-block;
-}
-
-.our-team .social li a {
-  display: block;
-  padding: 10px;
-  font-size: 17px;
-  color: white;
-  transition: all 0.3s ease 0s;
-  text-decoration: none;
-}
-
-.our-team .social li a:hover {
-  color: #1369ce;
-  background-color: #f7f5ec;
+.accordion{
+  input[type="radio"] {
+    display: none;
+ }
+  label{
+    display: block;
+    padding: 10px;
+    font-size: large;
+    border-bottom: 1px solid black;
+    color: white;
+    background: #0076ff;
+    z-index: 2; /* put it above the accordion content */
+  }
+  &:last-child{
+    label, .accordion-content{
+      border: none;
+    }
+  }
+  .accordion-content {
+    border-bottom: 1px solid black;
+    padding: 0;
+    opacity: 0;
+    max-height: 0;
+    overflow: hidden;
+    z-index: -1;
+    transition: 0.3s linear;
+ }
+ input{
+   &:checked~{
+    .accordion-content {
+      padding: 30px;
+      opacity: 1;
+      max-height: 500px;
+      z-index: 1;
+   }
+   }
+ }
 }
