--- a/assests/css/_forms.scss
+++ b/assests/css/_forms.scss
@@ -1,3 +1,4 @@
+@import "mixins";
 form{
     margin: 0;
     width: 100%;
@@ -13,4 +14,60 @@ form{
     input::placeholder{
         padding-left: 10px;
     }
+}
+.form-body{
+    @include set-bg-color(midnightblue, white);
+}
+.form-container{
+    margin: 20px;
+    padding: 15px;
+    .input-cnt {
+        display: flex; /* display the icon and the input in a line */
+        margin-bottom: 15px;
+        &:last-child {
+            margin-bottom: 0px;
+         }
+         i {
+            min-width: 40px; /* set a minimum width for the icon */
+            padding: 10px; /* make sure the icon is centered vertically */
+            text-align: center; /* horizontally center the icon */
+            background: lightgrey;
+            border-top-left-radius: 20px;
+            border-bottom-left-radius: 20px;
+            color: #0076ff;
+         }
+        &:hover{
+            i {
+                background: #0076ff;
+                color: white;
+             }
+        }
+        input[type="text"],textarea{
+            outline: none;
+            border: 1px solid #0076ff;
+            padding: 10px;
+            border-top-right-radius: 20px;
+            border-bottom-right-radius: 20px;
+            width: 100%;
+        }
+        input[type="submit"] {
+            border: 2px solid #0076ff;
+            border-radius: 20px;
+            outline: none;
+            width: 75%;
+            margin: 0 auto;
+            font-size: 105%;
+            padding: 8px;
+            color: #0076ff;
+            background: white;
+            transition-duration: .5s;
+            &:hover {
+                color: white;
+                background: #0076ff;
+             }
+         }
+     }
+     .textarea-icon {
+        padding: 60px 10px !important; /* top and bottom paddings are set to 60px */
+     }
 }
