--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -209,6 +209,12 @@ html, body, header, aside, main, footer, div, section, article {
   padding: 10px;
   margin-top: auto;
 }
+.card p {
+  display: none;
+}
+.card:hover p {
+  display: block;
+}
 
 .our-team {
   padding: 30px 0 40px;
@@ -508,7 +514,7 @@ form input::placeholder {
   border: 2px solid #0076ff;
   border-radius: 20px;
   outline: none;
-  width: 75%;
+  width: 50%;
   margin: 0 auto;
   font-size: 105%;
   padding: 8px;
@@ -598,7 +604,7 @@ main {
 }
 main .hero {
   padding: 100px 0;
-  background-image: url("../images/king.jpg");
+  background-image: url("https://images.pexels.com/photos/1229861/pexels-photo-1229861.jpeg?cs=srgb&dl=pexels-hasan-albari-1229861.jpg&fm=jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -606,7 +612,6 @@ main .hero {
 }
 main .hero .title, main .hero p {
   display: block;
-  text-transform: capitalize;
   font-size: 28px;
 }
 main .hero .title {
