--- a/assests/css/_default.scss
+++ b/assests/css/_default.scss
@@ -46,7 +46,7 @@ p{
     padding: 15px 0;
     color: midnightblue;
 }
-#googleMap {
+#map {
     height: 400px;
     /* The height is 400 pixels */
     width: 100%;
