--- a/assests/css/_buttons.scss
+++ b/assests/css/_buttons.scss
@@ -1,82 +1,3 @@
-
-@mixin button-bg($bg) {
-    background: $bg;
-    &:hover {
-      background:darken($bg,8%);
-      transition: all 0.3s ease;
-    }
-    &:active {
-      background:darken($bg,25%);
-    } 
-  }
-  .btn-group {
-    margin-left: auto;
-    padding: 10px 0;
-    text-align:center;
-    }
-  .btn{
-   color:white;
-   text-decoration:none;
-   padding:8px 10px;
-   border-radius: 8px
-  }
-  .btn-green {
-     @include button-bg(#2ecc71);
-  }
-  
-  .btn-blue {
-     @include button-bg(#3498db);
-  }
-  
-  .btn-yellow{
-     @include button-bg(#f1c40f);
-  }
-  
-  .btn-red {
-     @include button-bg(#e74c3c);
-  }
-  .btn-menu{
-    text-align: right;
-  }
-  button{
-    outline: none;
-    border: none;
-    color:white;
-    padding:8px 10px;
-    border-radius:3px;
-  }
-  .social-media{
-    padding: 20px 0;
-    ol{
-      padding: 30px 0;
-      li{
-        display: inline-block;
-        padding: 0 3px;
-      }
-    }
-  }
-  .tag {
-    padding: 4px;
-    font-size: smaller;
-    border-radius: 8px
-  }
-  .tag + .tag {
-    margin-left: .5em;
-  }
-  .tag-blue {
-    background: #56CCF2;
-    background: linear-gradient(to bottom, #2F80ED, #56CCF2);
-    color: #fafafa;
-  }
-  
-  .tag-brown {
-    background: #D1913C;
-    background: linear-gradient(to bottom, #FFD194, #D1913C);
-    color: #fafafa;
-  }
-  
-  .tag-red {
-    background: #cb2d3e;
-    background: linear-gradient(to bottom, #ef473a, #cb2d3e);
-    color: #fafafa;
-  }
+.carousel-btn{
+    margin: 5px;
+}
