--- a/assests/css/styles.scss
+++ b/assests/css/styles.scss
@@ -1,8 +1,8 @@
 
-@use "default";
+@use "rest";
 @use "layout";
-@use "cards";
 @use "buttons";
 @use "forms";
+@use "cards";
 @use "main";
-
+@import "mixins";
