--- a/assests/css/_cards.scss
+++ b/assests/css/_cards.scss
@@ -1,165 +1,190 @@
 @import "mixins";
-.card{
-  margin: 10px;
-  border-radius: 1em;
-  box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
-  .card__body {
-    padding: 10px 20px;
-  }
-  h4 {
-    font-size: 20px;
-    text-transform: capitalize;
-    padding: 5px 0;
-  }
-  .card__footer {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    margin-top: auto;
-  }
-  p{
-    display: none;
-  }
-  &:hover{
+.about-card{
+    padding: 40px;
+    img{
+        margin: auto;
+        width: 80%;
+        border-radius: 50%;
+    }
+    li{
+        padding: 12px 0;
+        font-size: 16px;
+        span{ padding-left: 10px;}
+    }
     p{
-      display: block;
+        padding:0 20px;
+        font-weight: 200;
+        color: gray;
     }
+    @media only screen and (max-width: 769px) {
+        padding: 20px 0;
+        p{ padding: 20px 0; }
+    }
+}
+
+.skills{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 20px auto;
+  width: 80%;
+  .skill{
+    display: flex;
+    justify-content: flex-start;
+    margin: 20px;
+    align-items: center;
+  }
+  .bar{
+    width: 500px;
+    height: 30px;
+    margin-right: 10px;
+    margin-left: auto;
+    border: 1px solid $bg-primary;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    @media only screen and (max-width: 769px) {
+      display: none;
+    }
+  }
+  .inside1{
+    @include style(90%);
+    animation: slide1 2s ease-in-out;
+}
+  .inside2{
+    @include style(80%);
+    animation: slide2 2s ease-in-out;
+}
+  .inside3{
+    @include style(60%);
+    animation: slide3 2s ease-in-out;
+}
+}
+
+
+
+@keyframes slide1{
+  from{
+      width: 0;
+  }
+  to{
+      width: 90%;
+  }
+}
+@keyframes slide2{
+  from{
+      width: 0;
+  }
+  to{
+      width: 80%;
+  }
+}
+@keyframes slide3{
+  from{
+      width: 0;
+  }
+  to{
+      width: 55%;
   }
 }
 
-.our-team {
-  padding: 30px 0 40px;
-  margin-bottom: 30px;
+
+
+.work-card{
+    margin: auto;
+    width: 60%;
+    text-align: center;
+    img{
+        border-radius: 50%;
+    }
+    h2,p,img{
+        margin: 8px;
+    }
+}
+
+.carousel{
+  @include d-flex;
+  //position: relative;
+  margin: 20px auto;
+  width: 200px;
+  height: 280px;
   background-color: white;
-  text-align: center;
-  overflow: hidden;
-  position: relative;
-  p{
-    padding: 10px;
-    display: none;
+  border-radius: 10px;
+  box-shadow: -1rem 0 3rem #000;
+  transition: 0.4s ease-out;
+  &::not(:first-child) {
+      margin-left: -50px;
   }
-  .picture {
-    display: inline-block;
-    height: 130px;
-    width: 130px;
-    margin-bottom: 50px;
-    z-index: 1;
-    position: relative;
-    img {
-      width: 100%;
-      height: auto;
-      border-radius: 50%;
-      transform: scale(1);
-      transition: all 0.9s ease 0s;
-    }
-    &:before {
-      content: "";
-      width: 100%;
-      height: 0;
-      border-radius: 50%;
-      background-color: #1369ce;
-      position: absolute;
-      bottom: 135%;
-      right: 0;
-      left: 0;
-      opacity: 0.9;
-      transform: scale(3);
-      transition: all 0.3s linear 0s;
-    }
-  }
-  &:hover{
-    P{
-      display: block;
-    }
-    .picture::before{
-      height: 100%;
-    }
-    .picture::after {
-      content: "";
-      width: 100%;
-      height: 100%;
-      border-radius: 50%;
-      background-color: #1369ce;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: -1;
-    }
-    .picture {
-      img {
-        box-shadow: 0 0 0 14px #f7f5ec;
-        transform: scale(0.7);
-      }
-    }
-    .social {
-      bottom: 0;
-    }
-  }
-  .title {
-    display: block;
-    font-size: 15px;
-    color: #4e5052;
-    text-transform: capitalize;
-  }
-  .social {
-    width: 100%;
-    background-color: #1369ce;
-    position: absolute;
-    bottom: -100px;
-    left: 0;
-    transition: all 0.5s ease 0s;
-    li {
-      display: inline-block;
-      a {
+  &:hover {
+      transform: translateY(-20px);
+      transition: 0.4s ease-out;
+      .details {
         display: block;
-        padding: 10px;
-        font-size: 17px;
-        color: white;
-        transition: all 0.3s ease 0s;
-        text-decoration: none;
-        &:hover {
-          @include set-bg-color(white,#1369ce);
-        }        
+        width: 100%;
+        transition: 0.4s ease-out;
       }
     }
+  &:hover ~ .carousel {
+      left: 50px;
+      transition: 0.4s ease-out;
+    }
+  .title, p,h4,li{
+    color: $bg-primary;
+    font-weight: 500;
+    padding: 7px 20px;
+  }
+  .details{
+    display: none;
+    position: absolute;
+    width: 0;
+    height: 100%;
+    @include set-bg-color($text-white,$bg-primary);
+    border-radius: 10px;
+  }
+  li:last-of-type{
+    text-align: right;
   }
 }
-
-.accordion{
-  input[type="radio"] {
-    display: none;
- }
-  label{
-    display: block;
-    padding: 10px;
-    font-size: large;
-    border-bottom: 1px solid black;
-    color: white;
-    background: #0076ff;
-    z-index: 2; /* put it above the accordion content */
+.social-media{
+  margin: 30px auto;
+  width: 20%;
+  @media only screen and (max-width: 624px) {
+    width: 60%;
   }
-  &:last-child{
-    label, .accordion-content{
-      border: none;
+}
+.grid{
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(minmax(auto));
+  grid-gap: 5px;
+  max-width: 70%;
+  margin: auto;
+  div{
+    @include set-bg-color($bg-primary,#fff);
+    padding: 30px;
+    li{
+      margin:10px 0 ;
+      text-transform: uppercase;
     }
   }
-  .accordion-content {
-    border-bottom: 1px solid black;
-    padding: 0;
-    opacity: 0;
-    max-height: 0;
-    overflow: hidden;
-    z-index: -1;
-    transition: 0.3s linear;
- }
- input{
-   &:checked~{
-    .accordion-content {
-      padding: 30px;
-      opacity: 1;
-      max-height: 500px;
-      z-index: 1;
-   }
-   }
- }
+  .one{
+      grid-column: 1/3;
+      grid-row: 1/4;
+  }
+  .two{
+      grid-column: 3/7;
+      grid-row: 1/2;
+  }
+  .three{
+      grid-column: 3/5;
+      grid-row: 2/4;
+  }
+  .four{
+      grid-column: 5/7;
+      grid-row: 2/6;
+  }
+  .five{
+      grid-column: 1/5;
+      grid-row: 4/6;
+  }
 }
