--- a/assests/css/_forms.scss
+++ b/assests/css/_forms.scss
@@ -1,26 +1,7 @@
 @import "mixins";
-form{
-    margin: 0;
-    width: 100%;
-    input{
-        outline: none;
-        border: none;
-        padding: 8px 10px ;
-        width: 99%;
-        &::placeholder{
-            padding-left: 10px;
-        }
-    }
-    input::placeholder{
-        padding-left: 10px;
-    }
-}
-.form-body{
-    @include set-bg-color(midnightblue, white);
-}
 .form-container{
     margin: 20px;
-    padding: 15px;
+    padding: 10px;
     .input-cnt {
         display: flex; /* display the icon and the input in a line */
         margin-bottom: 15px;
@@ -28,42 +9,42 @@ form{
             margin-bottom: 0px;
          }
          i {
-            min-width: 40px; /* set a minimum width for the icon */
+            min-width: 54px; /* set a minimum width for the icon */
             padding: 10px; /* make sure the icon is centered vertically */
             text-align: center; /* horizontally center the icon */
             background: lightgrey;
             border-top-left-radius: 20px;
             border-bottom-left-radius: 20px;
-            color: #0076ff;
+            color: $bg-primary;
          }
         &:hover{
             i {
-                background: #0076ff;
+                background: goldenrod;
                 color: white;
              }
         }
         input[type="text"],textarea{
             outline: none;
-            border: 1px solid #0076ff;
+            border: 1px solid $bg-primary;
             padding: 10px;
             border-top-right-radius: 20px;
             border-bottom-right-radius: 20px;
             width: 100%;
         }
         input[type="submit"] {
-            border: 2px solid #0076ff;
+            border: 2px solid $bg-primary;
             border-radius: 20px;
             outline: none;
             width: 50%;
             margin: 0 auto;
             font-size: 105%;
             padding: 8px;
-            color: #0076ff;
+            color: $bg-primary;
             background: white;
             transition-duration: .5s;
             &:hover {
                 color: white;
-                background: #0076ff;
+                background: goldenrod
              }
          }
      }
