--- a/assests/css/_main.scss
+++ b/assests/css/_main.scss
@@ -1,115 +1,72 @@
 @import "mixins";
+
+//header
 header{
     position: fixed;
     width: 100%;
-    @include set-bg-color(midnightblue, white);
+    padding: 10px 0;
     @include box-shadow;
-    z-index: 100;
-    nav{
-        @include d-flex;
-        .navbar-top{
-            margin: auto;
-            .nav-item{
-                text-align: center;
-                padding-left: 18px;
-            }
-        }
-        .form{
-            margin: auto;
-            width: 40%;
-            text-align: center;
-        }
-        input{
-            border-radius: 8px
-        }
+    @include set-bg-color($bg-primary,#fff);
+    z-index: 99;
+    .nav-item{
+        margin-left: 20px;
+        text-transform: uppercase;
+        &:hover{ border-bottom: 2px solid goldenrod;}
+        font-weight: bold;
     }
-    @media only screen and (max-width: 420px){
-        .btn-group{
-            display: none;
-        }
-    }
-    @media only screen and (max-width: 999px){
-        nav .navbar-top{
-            display: none;
-        }
-        .btn-group{
-            margin: auto;
-        }
-    }
-    @media only screen and (min-width: 999px) {
-        nav .btn-menu{
-            display: none;
-        }
+    .btn-menu{ display: none; }
+    @media only screen and (max-width: 624px) {
+        .navbar{ display: none; }
+        .btn-menu{ display: block; }
     }
 }
+
+//aside
 aside{
     display: none;
     position: fixed;
     z-index: 100;
     width: 100%;
     height: 100%;
-    @include set-bg-color(midnightblue, white);
+    @include set-bg-color($bg-primary,#fff);
     .navbar{
         display: block;
-        padding: 40px 0;
-        li{
-            padding: 8px;
-            .fa{
-                display: none;
-            }
-        }
+        padding: 30px;
+        li{ padding: 8px; }
+    }
+    .btn-menu{
+        float: right;
+        margin: 30px;
     }
 }
+
+//main
 main{
-    margin-top: 60px;
-    .hero{
-        padding: 100px 0;
-        background-image: url('https://images.pexels.com/photos/1229861/pexels-photo-1229861.jpeg?cs=srgb&dl=pexels-hasan-albari-1229861.jpg&fm=jpg');
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-size: cover;
-        color: floralwhite;
-        .title,p{
-            display: block;
-            font-size: 28px;
-        }
-        .title{
-            font-weight: bold;
-              margin-bottom: 30px;
-          }
-        .btn-group{
-            text-align: right;
-        }
-    }
-    
+    margin-top: 35px;
+    @include set-bg-color(rgba(255, 250, 250, 0.801), black);
 }
-footer{
-    @include set-bg-color(midnightblue, white);
-    .navbar{
-        .navbar-item{
-            display: block;
-            .fa{
-                display: none;
-            }
-        }
-    }
-    .copyright{
-        @include set-bg-color(white, midnightblue);
+//hero
+.hero {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    @include set-bg-color(#fff,$bg-primary);
+    .container{
+        z-index: 2;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         text-align: center;
     }
-    .section-title{
-        color: inherit;
+    img,h1,h2,p{ margin: 10px 0;}
+    img{
+        width: 25%;
+        border-radius: 50%;
     }
-    .navbar{
-        .fa{
-            display: none;
-        }
-    }
-}
-.footer-body{
-    @include d-flex;
-    justify-content: space-around;
-    @media only screen and (max-width: 600px) {
-        display: block;
-    }
+  }
+  footer{
+    @include set-bg-color($bg-primary, $text-white);
+    padding: 30px 0;
+    text-align: center;
 }
