--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -1,4 +1,3 @@
-@mixins mCq();
 * {
   margin: 0;
   padding: 0;
@@ -10,66 +9,46 @@ a {
   color: inherit;
 }
 
-img {
-  max-width: 100%;
-  display: block;
-  object-fit: cover;
-}
-
-ul li, ol li {
+li {
   list-style-type: none;
-  cursor: pointer;
 }
 
-ol {
-  display: inline;
+img {
+  width: 100%;
 }
-ol li {
-  display: inline-block;
+
+header, main, footer, section {
+  display: block;
+}
+
+.container {
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box;
 }
 
 section {
-  padding: 50px 0;
+  position: relative;
+  padding: 100px 0;
 }
 section .section-title {
-  font-size: 22px;
-  font-weight: bold;
-  color: midnightblue;
-  padding: 20px 0;
+  text-align: center;
+  margin: 10px auto;
+}
+section .section-content {
+  display: block;
+  padding: 30px 0;
 }
 
 p {
   font-size: 18px;
 }
 
-.address {
-  padding: 20px 0;
-  font-weight: 200;
-}
-.address address {
-  padding: 10px 0;
-}
-
-.content-title {
-  padding: 15px 0;
-  color: midnightblue;
-}
-
-#map {
-  height: 400px;
-  /* The height is 400 pixels */
-  width: 100%;
-  /* The width is the width of the web page */
-}
-
-html, body, header, aside, main, footer, div, section, article {
-  box-sizing: border-box;
-}
-
-.container {
-  margin: auto;
-  width: 90%;
-  padding: 25px 0;
+.info {
+  padding: 10px;
+  color: gray;
 }
 
 .row {
@@ -184,299 +163,20 @@ html, body, header, aside, main, footer, div, section, article {
   .col-lg-12 {
     width: 100%;
   }
+}
+.carousel-btn {
+  margin: 5px;
+}
 
-  .container {
-    width: 80%;
-  }
-}
-@mixins mCq();
-.card {
-  margin: 10px;
-  border-radius: 1em;
-  box-shadow: 0 0.1rem 1rem rgba(0, 0, 0, 0.1);
-}
-.card .card__body {
-  padding: 10px 20px;
-}
-.card h4 {
-  font-size: 20px;
-  text-transform: capitalize;
-  padding: 5px 0;
-}
-.card .card__footer {
+.d-flex {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
-  margin-top: auto;
-}
-.card p {
-  display: none;
-}
-.card:hover p {
-  display: block;
-}
-
-.our-team {
-  padding: 30px 0 40px;
-  margin-bottom: 30px;
-  background-color: white;
-  text-align: center;
-  overflow: hidden;
-  position: relative;
-}
-.our-team p {
-  padding: 10px;
-  display: none;
-}
-.our-team .picture {
-  display: inline-block;
-  height: 130px;
-  width: 130px;
-  margin-bottom: 50px;
-  z-index: 1;
-  position: relative;
-}
-.our-team .picture img {
-  width: 100%;
-  height: auto;
-  border-radius: 50%;
-  transform: scale(1);
-  transition: all 0.9s ease 0s;
-}
-.our-team .picture:before {
-  content: "";
-  width: 100%;
-  height: 0;
-  border-radius: 50%;
-  background-color: #1369ce;
-  position: absolute;
-  bottom: 135%;
-  right: 0;
-  left: 0;
-  opacity: 0.9;
-  transform: scale(3);
-  transition: all 0.3s linear 0s;
-}
-.our-team:hover P {
-  display: block;
-}
-.our-team:hover .picture::before {
-  height: 100%;
-}
-.our-team:hover .picture::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: #1369ce;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-.our-team:hover .picture img {
-  box-shadow: 0 0 0 14px #f7f5ec;
-  transform: scale(0.7);
-}
-.our-team:hover .social {
-  bottom: 0;
-}
-.our-team .title {
-  display: block;
-  font-size: 15px;
-  color: #4e5052;
-  text-transform: capitalize;
-}
-.our-team .social {
-  width: 100%;
-  background-color: #1369ce;
-  position: absolute;
-  bottom: -100px;
-  left: 0;
-  transition: all 0.5s ease 0s;
-}
-.our-team .social li {
-  display: inline-block;
-}
-.our-team .social li a {
-  display: block;
-  padding: 10px;
-  font-size: 17px;
-  color: white;
-  transition: all 0.3s ease 0s;
-  text-decoration: none;
-}
-.our-team .social li a:hover {
-  background-color: white;
-  color: #1369ce;
-}
-
-.accordion input[type=radio] {
-  display: none;
-}
-.accordion label {
-  display: block;
-  padding: 10px;
-  font-size: large;
-  border-bottom: 1px solid black;
-  color: white;
-  background: #0076ff;
-  z-index: 2;
-  /* put it above the accordion content */
-}
-.accordion:last-child label, .accordion:last-child .accordion-content {
-  border: none;
-}
-.accordion .accordion-content {
-  border-bottom: 1px solid black;
-  padding: 0;
-  opacity: 0;
-  max-height: 0;
-  overflow: hidden;
-  z-index: -1;
-  transition: 0.3s linear;
-}
-.accordion input:checked ~ .accordion-content {
-  padding: 30px;
-  opacity: 1;
-  max-height: 500px;
-  z-index: 1;
-}
-
-.btn-group {
-  margin-left: auto;
-  padding: 10px 0;
-  text-align: center;
-}
-
-.btn {
-  color: white;
-  text-decoration: none;
-  padding: 8px 10px;
-  border-radius: 8px;
-}
-
-.btn-green {
-  background: #2ecc71;
-}
-.btn-green:hover {
-  background: #26ab5f;
-  transition: all 0.3s ease;
-}
-.btn-green:active {
-  background: #176437;
-}
-
-.btn-blue {
-  background: #3498db;
-}
-.btn-blue:hover {
-  background: #2383c4;
-  transition: all 0.3s ease;
-}
-.btn-blue:active {
-  background: #16527a;
-}
-
-.btn-yellow {
-  background: #f1c40f;
-}
-.btn-yellow:hover {
-  background: #cba50c;
-  transition: all 0.3s ease;
-}
-.btn-yellow:active {
-  background: #796307;
-}
-
-.btn-red {
-  background: #e74c3c;
-}
-.btn-red:hover {
-  background: #df2e1b;
-  transition: all 0.3s ease;
-}
-.btn-red:active {
-  background: #921e12;
-}
-
-.btn-menu {
-  text-align: right;
-}
-
-button {
-  outline: none;
-  border: none;
-  color: white;
-  padding: 8px 10px;
-  border-radius: 3px;
-}
-
-.social-media {
-  padding: 20px 0;
-}
-.social-media ol {
-  padding: 30px 0;
-}
-.social-media ol li {
-  display: inline-block;
-  padding: 0 3px;
-}
-
-.tag {
-  padding: 4px;
-  font-size: smaller;
-  border-radius: 8px;
-}
-
-.tag + .tag {
-  margin-left: 0.5em;
-}
-
-.tag-blue {
-  background: #56CCF2;
-  background: linear-gradient(to bottom, #2F80ED, #56CCF2);
-  color: #fafafa;
-}
-
-.tag-brown {
-  background: #D1913C;
-  background: linear-gradient(to bottom, #FFD194, #D1913C);
-  color: #fafafa;
-}
-
-.tag-red {
-  background: #cb2d3e;
-  background: linear-gradient(to bottom, #ef473a, #cb2d3e);
-  color: #fafafa;
-}
-
-@mixins mCq();
-form {
-  margin: 0;
-  width: 100%;
-}
-form input {
-  outline: none;
-  border: none;
-  padding: 8px 10px;
-  width: 99%;
-}
-form input::placeholder {
-  padding-left: 10px;
-}
-form input::placeholder {
-  padding-left: 10px;
-}
-
-.form-body {
-  background-color: midnightblue;
-  color: white;
+  align-items: center;
 }
 
 .form-container {
   margin: 20px;
-  padding: 15px;
+  padding: 10px;
 }
 .form-container .input-cnt {
   display: flex;
@@ -487,7 +187,7 @@ form input::placeholder {
   margin-bottom: 0px;
 }
 .form-container .input-cnt i {
-  min-width: 40px;
+  min-width: 54px;
   /* set a minimum width for the icon */
   padding: 10px;
   /* make sure the icon is centered vertically */
@@ -496,86 +196,288 @@ form input::placeholder {
   background: lightgrey;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
-  color: #0076ff;
+  color: #010111;
 }
 .form-container .input-cnt:hover i {
-  background: #0076ff;
+  background: goldenrod;
   color: white;
 }
 .form-container .input-cnt input[type=text], .form-container .input-cnt textarea {
   outline: none;
-  border: 1px solid #0076ff;
+  border: 1px solid #010111;
   padding: 10px;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   width: 100%;
 }
 .form-container .input-cnt input[type=submit] {
-  border: 2px solid #0076ff;
+  border: 2px solid #010111;
   border-radius: 20px;
   outline: none;
   width: 50%;
   margin: 0 auto;
   font-size: 105%;
   padding: 8px;
-  color: #0076ff;
+  color: #010111;
   background: white;
   transition-duration: 0.5s;
 }
 .form-container .input-cnt input[type=submit]:hover {
   color: white;
-  background: #0076ff;
+  background: goldenrod;
 }
 .form-container .textarea-icon {
   padding: 60px 10px !important;
   /* top and bottom paddings are set to 60px */
 }
 
-@mixins mCq();
+.d-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.about-card {
+  padding: 40px;
+}
+.about-card img {
+  margin: auto;
+  width: 80%;
+  border-radius: 50%;
+}
+.about-card li {
+  padding: 12px 0;
+  font-size: 16px;
+}
+.about-card li span {
+  padding-left: 10px;
+}
+.about-card p {
+  padding: 0 20px;
+  font-weight: 200;
+  color: gray;
+}
+@media only screen and (max-width: 769px) {
+  .about-card {
+    padding: 20px 0;
+  }
+  .about-card p {
+    padding: 20px 0;
+  }
+}
+
+.skills {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 20px auto;
+  width: 80%;
+}
+.skills .skill {
+  display: flex;
+  justify-content: flex-start;
+  margin: 20px;
+  align-items: center;
+}
+.skills .bar {
+  width: 500px;
+  height: 30px;
+  margin-right: 10px;
+  margin-left: auto;
+  border: 1px solid #010111;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+}
+@media only screen and (max-width: 769px) {
+  .skills .bar {
+    display: none;
+  }
+}
+.skills .inside1 {
+  border-radius: 30px;
+  width: 90%;
+  height: 29px;
+  background: #010111;
+  animation: slide1 2s ease-in-out;
+}
+.skills .inside2 {
+  border-radius: 30px;
+  width: 80%;
+  height: 29px;
+  background: #010111;
+  animation: slide2 2s ease-in-out;
+}
+.skills .inside3 {
+  border-radius: 30px;
+  width: 60%;
+  height: 29px;
+  background: #010111;
+  animation: slide3 2s ease-in-out;
+}
+
+@keyframes slide1 {
+  from {
+    width: 0;
+  }
+  to {
+    width: 90%;
+  }
+}
+@keyframes slide2 {
+  from {
+    width: 0;
+  }
+  to {
+    width: 80%;
+  }
+}
+@keyframes slide3 {
+  from {
+    width: 0;
+  }
+  to {
+    width: 55%;
+  }
+}
+.work-card {
+  margin: auto;
+  width: 60%;
+  text-align: center;
+}
+.work-card img {
+  border-radius: 50%;
+}
+.work-card h2, .work-card p, .work-card img {
+  margin: 8px;
+}
+
+.carousel {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px auto;
+  width: 200px;
+  height: 280px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: -1rem 0 3rem #000;
+  transition: 0.4s ease-out;
+}
+.carousel::not(:first-child) {
+  margin-left: -50px;
+}
+.carousel:hover {
+  transform: translateY(-20px);
+  transition: 0.4s ease-out;
+}
+.carousel:hover .details {
+  display: block;
+  width: 100%;
+  transition: 0.4s ease-out;
+}
+.carousel:hover ~ .carousel {
+  left: 50px;
+  transition: 0.4s ease-out;
+}
+.carousel .title, .carousel p, .carousel h4, .carousel li {
+  color: #010111;
+  font-weight: 500;
+  padding: 7px 20px;
+}
+.carousel .details {
+  display: none;
+  position: absolute;
+  width: 0;
+  height: 100%;
+  background-color: white;
+  color: #010111;
+  border-radius: 10px;
+}
+.carousel li:last-of-type {
+  text-align: right;
+}
+
+.social-media {
+  margin: 30px auto;
+  width: 20%;
+}
+@media only screen and (max-width: 624px) {
+  .social-media {
+    width: 60%;
+  }
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(minmax(auto));
+  grid-gap: 5px;
+  max-width: 70%;
+  margin: auto;
+}
+.grid div {
+  background-color: #010111;
+  color: #fff;
+  padding: 30px;
+}
+.grid div li {
+  margin: 10px 0;
+  text-transform: uppercase;
+}
+.grid .one {
+  grid-column: 1/3;
+  grid-row: 1/4;
+}
+.grid .two {
+  grid-column: 3/7;
+  grid-row: 1/2;
+}
+.grid .three {
+  grid-column: 3/5;
+  grid-row: 2/4;
+}
+.grid .four {
+  grid-column: 5/7;
+  grid-row: 2/6;
+}
+.grid .five {
+  grid-column: 1/5;
+  grid-row: 4/6;
+}
+
+.d-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 header {
   position: fixed;
   width: 100%;
-  background-color: midnightblue;
-  color: white;
+  padding: 10px 0;
   box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3), 0 11px 8px rgba(0, 0, 0, 0.22);
-  z-index: 100;
+  background-color: #010111;
+  color: #fff;
+  z-index: 99;
 }
-header nav {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+header .nav-item {
+  margin-left: 20px;
+  text-transform: uppercase;
+  font-weight: bold;
 }
-header nav .navbar-top {
-  margin: auto;
+header .nav-item:hover {
+  border-bottom: 2px solid goldenrod;
 }
-header nav .navbar-top .nav-item {
-  text-align: center;
-  padding-left: 18px;
+header .btn-menu {
+  display: none;
 }
-header nav .form {
-  margin: auto;
-  width: 40%;
-  text-align: center;
-}
-header nav input {
-  border-radius: 8px;
-}
-@media only screen and (max-width: 420px) {
-  header .btn-group {
+@media only screen and (max-width: 624px) {
+  header .navbar {
     display: none;
   }
-}
-@media only screen and (max-width: 999px) {
-  header nav .navbar-top {
-    display: none;
-  }
-  header .btn-group {
-    margin: auto;
-  }
-}
-@media only screen and (min-width: 999px) {
-  header nav .btn-menu {
-    display: none;
+  header .btn-menu {
+    display: block;
   }
 }
 
@@ -585,75 +487,61 @@ aside {
   z-index: 100;
   width: 100%;
   height: 100%;
-  background-color: midnightblue;
-  color: white;
+  background-color: #010111;
+  color: #fff;
 }
 aside .navbar {
   display: block;
-  padding: 40px 0;
+  padding: 30px;
 }
 aside .navbar li {
   padding: 8px;
 }
-aside .navbar li .fa {
-  display: none;
+aside .btn-menu {
+  float: right;
+  margin: 30px;
 }
 
 main {
-  margin-top: 60px;
+  margin-top: 35px;
+  background-color: rgba(255, 250, 250, 0.801);
+  color: black;
 }
-main .hero {
-  padding: 100px 0;
-  background-image: url("https://images.pexels.com/photos/1229861/pexels-photo-1229861.jpeg?cs=srgb&dl=pexels-hasan-albari-1229861.jpg&fm=jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  color: floralwhite;
+
+.hero {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
+  color: #010111;
 }
-main .hero .title, main .hero p {
-  display: block;
-  font-size: 28px;
+.hero .container {
+  z-index: 2;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
-main .hero .title {
-  font-weight: bold;
-  margin-bottom: 30px;
+.hero img, .hero h1, .hero h2, .hero p {
+  margin: 10px 0;
 }
-main .hero .btn-group {
-  text-align: right;
+.hero img {
+  width: 25%;
+  border-radius: 50%;
 }
 
 footer {
-  background-color: midnightblue;
+  background-color: #010111;
   color: white;
-}
-footer .navbar .navbar-item {
-  display: block;
-}
-footer .navbar .navbar-item .fa {
-  display: none;
-}
-footer .copyright {
-  background-color: white;
-  color: midnightblue;
+  padding: 30px 0;
   text-align: center;
 }
-footer .section-title {
-  color: inherit;
-}
-footer .navbar .fa {
-  display: none;
-}
 
-.footer-body {
+.d-flex {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  justify-content: space-around;
-}
-@media only screen and (max-width: 600px) {
-  .footer-body {
-    display: block;
-  }
 }
 
 /*# sourceMappingURL=styles.css.map */
