--- a/assests/css/_cards.scss
+++ b/assests/css/_cards.scss
@@ -1,26 +1,5 @@
 @import "mixins";
-.about-card{
-    padding: 40px;
-    img{
-        margin: auto;
-        width: 80%;
-        border-radius: 50%;
-    }
-    li{
-        padding: 12px 0;
-        font-size: 16px;
-        span{ padding-left: 10px;}
-    }
-    p{
-        padding:0 20px;
-        font-weight: 200;
-        color: gray;
-    }
-    @media only screen and (max-width: 769px) {
-        padding: 20px 0;
-        p{ padding: 20px 0; }
-    }
-}
+
 
 .skills{
   display: flex;
@@ -187,4 +166,49 @@
       grid-column: 1/5;
       grid-row: 4/6;
   }
+}
+
+.about-preview{
+  .details{
+    font-weight: 200;
+    color: gray;
+  }
+  img{
+    width: 50%;
+    border-radius: 50%;
+  }
+  @media only screen and (max-width: 769px) {
+    .body{
+      text-align: center;
+      margin-bottom: 10px;
+    }
+  }
+  @media only screen and (min-width: 769px) {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(minmax(auto));
+    grid-gap: 20px;
+    transform: scale(0.9, 0.9);
+  .body{
+    grid-column: 1/3;
+    ul{
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(minmax(auto));
+      grid-gap: 10px;
+      padding-top: 20px;
+      li{
+        grid-column: 1/2;
+      }
+      li:nth-child(even){
+        grid-column: 2/5;
+      }
+    }
+  }
+  .details{
+    display: block;
+    grid-column: 3/13;
+  }
+  }
+  
 }
