--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,5 +1,9 @@
 @use "rest";
-@use "button";
-@use "cards";
-@use 'header';
+@use "tags";
+@use "buttons";
+@use "card";
+@use "forms";
+@use "layout";
+@use "header";
 @use "main";
+@use "footer";
