--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -1,46 +1,27 @@
-@import "mixin";
+@import "mixins";
+
 //header
 header{
     position: fixed;
-    @include dark-theme;
+    @include set-bg-color(white,$primary);
     @include box-shadow;
-    font-size: 80%;
-    z-index: 1000;
-}
-nav{
-    @include grid-container (12); 
-    align-items: center;
-    .btn-menu{justify-self: flex-end;}
-    #navBar{
-        display: none;
-        text-transform: uppercase;
-    }
+    z-index: 100;
+    .btn-menu{display: none;}
+    nav{display: block}
+    .nav-bars{
+        @include grid-container (7);
+        justify-items: flex-end;
+        align-items: center;
+    } 
+    //mobile begins here
     @include respond (mobile) {
-        .logo{ grid-column: 1/12;}
-        #navBar{
-            height: 90vh;
-            grid-column: 1/13;
-            grid-row: 2;
-        }
-        .nav-bar{
-            height: 100%;
-            text-align: center;
-            li{padding: 30px;}
-            @include light-theme;
-        }
-    }
-    @include respond (laptop) {
-        .logo{grid-column: 1/3;}
-        .btn-menu{display: none;}
-        #navBar{
+        .btn-menu{display: block; float: right;}
+        nav{display: none;}
+        .nav-bars{
             display: block;
-            grid-column: 3/13;
-            grid-row-start: 1;
-            justify-self: flex-end;
-        }
-        .nav-bar{
-            @include grid-container (6);
-            li:last-child{justify-self: flex-end;}
+            height: 100vh;
+            .nav-item, .nav-down{padding: 20px; cursor: pointer;}
         }
     }
 }
+
