--- a/assets/css/_rest.scss
+++ b/assets/css/_rest.scss
@@ -1,9 +1,8 @@
-@import "mixin";
 
-*{
+* {
     margin: 0;
     padding: 0;
-    font-family:sans-serif;
+    font-family: sans-serif;
 }
 a{
     text-decoration: none;
@@ -15,33 +14,8 @@ img{width: 100%;}
 
 li{list-style-type: none;}
 
-h2,h3,h4,h5,h6{padding: 20px 0;}
+h2,h3,h4,h5,h6,.ul li{padding: 10px;}
 
-p{padding: 10px 0;}
+p{padding: 8px 10px;}
 
-header,section,.container,nav{
-    width: 100%;
-    box-sizing: border-box;
-}
-.container{
-    max-width: 980px;
-    margin: 0 auto;
-    padding: 10px;
-    .row{
-        @include grid-container (6);
-        padding: 40px 0;
-        align-self: center;
-        .row-title{
-            justify-self: center;
-            grid-column: 2/6;
-            margin: 30px 0;
-            color: $primary;
-        }
-        .row-content{
-            grid-column: 1/7;
-        }
-        &:hover{
-            .section-title{border-bottom: 2px solid gold;}
-        }
-    }
-}
+
