--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,144 +20,299 @@ li {
   list-style-type: none;
 }
 
-h2, h3, h4, h5, h6 {
-  padding: 20px 0;
+h2, h3, h4, h5, h6, .ul li {
+  padding: 10px;
 }
 
 p {
-  padding: 10px 0;
+  padding: 8px 10px;
 }
 
-header, section, .container, nav {
-  width: 100%;
-  box-sizing: border-box;
-}
-
-.container {
-  max-width: 980px;
-  margin: 0 auto;
-  padding: 10px;
-}
-.container .row {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(minmax(auto));
-  padding: 40px 0;
-  align-self: center;
-}
-.container .row .row-title {
-  justify-self: center;
-  grid-column: 2/6;
-  margin: 30px 0;
-  color: rgba(15, 79, 199, 0.897);
-}
-.container .row .row-content {
-  grid-column: 1/7;
-}
-.container .row:hover .section-title {
-  border-bottom: 2px solid gold;
-}
-
-.tag {
+.tag, .tag-detail, .tag-danger, .tag-success, .tag-warning, .tag-primary {
+  display: inline-block;
   padding: 5px;
-  border-radius: 5px;
+  transform: scale(0.6, 0.6);
+  font-weight: 200;
+}
+
+.tag-primary {
+  background-color: #007bff;
   color: white;
 }
 
-.btn-group {
+.tag-warning {
+  background-color: #ffc107;
+  color: white;
+}
+
+.tag-success {
+  background-color: #28a745;
+  color: white;
+}
+
+.tag-danger {
+  background-color: #dc3545;
+  color: white;
+}
+
+.tag-detail {
+  background-color: #6c757d;
+  color: white;
+}
+
+#buy {
+  position: fixed;
+  bottom: 100px;
+  right: 20px;
+  padding: 10px;
+  border-radius: 50%;
+  background-color: #28a745;
+  color: white;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
+
+.btn-group, .btn-group-rt, .btn-group-lt {
   margin: 0 auto;
   padding: 10px 0;
   text-align: center;
 }
 
-.btn {
-  color: white;
-  text-decoration: none;
-  padding: 8px 10px;
-  border-radius: 3px;
+.btn-group-lt {
+  text-align: left;
 }
 
-.btn-green, .tag-green {
-  background: #2ecc71;
-}
-.btn-green:hover, .tag-green:hover {
-  background: #26ab5f;
-  transition: all 0.3s ease;
-}
-.btn-green:active, .tag-green:active {
-  background: #176437;
-}
-
-.btn-blue, .tag-blue {
-  background: #3498db;
-}
-.btn-blue:hover, .tag-blue:hover {
-  background: #2383c4;
-  transition: all 0.3s ease;
-}
-.btn-blue:active, .tag-blue:active {
-  background: #16527a;
-}
-
-.btn-yellow, .tag-yellow {
-  background: #f1c40f;
-}
-.btn-yellow:hover, .tag-yellow:hover {
-  background: #cba50c;
-  transition: all 0.3s ease;
-}
-.btn-yellow:active, .tag-yellow:active {
-  background: #796307;
-}
-
-.btn-red, .tag-red {
-  background: #e74c3c;
-}
-.btn-red:hover, .tag-red:hover {
-  background: #df2e1b;
-  transition: all 0.3s ease;
-}
-.btn-red:active, .tag-red:active {
-  background: #921e12;
-}
-
-.btn-danger, .tag-danger {
-  background: #5c5959;
-}
-.btn-danger:hover, .tag-danger:hover {
-  background: #474545;
-  transition: all 0.3s ease;
-}
-.btn-danger:active, .tag-danger:active {
-  background: #1b1a1a;
+.btn-group-rt {
+  text-align: rightt;
 }
 
 button {
   outline: none;
   border: none;
-  color: white;
-  padding: 8px 20px;
-  border-radius: 5px;
-  font-size: 18px;
+  font-size: 15px;
 }
 
-.card {
-  border-radius: 5px;
-  box-shadow: 2px 6px 10px gray;
+.btn-success {
+  color: white;
+  text-decoration: none;
+  padding: 8px 10px;
+  border-radius: 3px;
+  background: #28a745;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
 }
-.card .card-header, .card ul {
-  display: flex;
-  justify-content: space-between;
+.btn-success:hover {
+  border: 1px solid #28a745;
+  color: #28a745;
+  background-color: white;
+}
+.btn-success:active {
+  background: #0f401b;
+}
+
+.btn-primary {
+  color: white;
+  text-decoration: none;
+  padding: 8px 10px;
+  border-radius: 3px;
+  background: #007bff;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
+.btn-primary:hover {
+  border: 1px solid #007bff;
+  color: #007bff;
+  background-color: white;
+}
+.btn-primary:active {
+  background: #003e80;
+}
+
+.btn-warning {
+  color: white;
+  text-decoration: none;
+  padding: 8px 10px;
+  border-radius: 3px;
+  background: #ffc107;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
+.btn-warning:hover {
+  border: 1px solid #ffc107;
+  color: #ffc107;
+  background-color: white;
+}
+.btn-warning:active {
+  background: #876500;
+}
+
+.btn-danger {
+  color: white;
+  text-decoration: none;
+  padding: 8px 10px;
+  border-radius: 3px;
+  background: #dc3545;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
+.btn-danger:hover {
+  border: 1px solid #dc3545;
+  color: #dc3545;
+  background-color: white;
+}
+.btn-danger:active {
+  background: #7c151f;
+}
+
+.btn-detail {
+  color: white;
+  text-decoration: none;
+  padding: 8px 10px;
+  border-radius: 3px;
+  background: #6c757d;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
+.btn-detail:hover {
+  border: 1px solid #6c757d;
+  color: #6c757d;
+  background-color: white;
+}
+.btn-detail:active {
+  background: #313539;
+}
+
+.btn-outline {
+  padding: 8px 10px;
+  border-radius: 3px;
+  border: 1px solid gray;
+  color: black;
+}
+.btn-outline:hover {
+  color: white;
+  text-decoration: none;
+  padding: 8px 10px;
+  border-radius: 3px;
+  background: #6c757d;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
+.btn-outline:hover:hover {
+  border: 1px solid #6c757d;
+  color: #6c757d;
+  background-color: white;
+}
+.btn-outline:hover:active {
+  background: #313539;
+}
+
+.carousel-item {
+  margin: 10px auto;
+  max-width: 500px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(minmax(auto));
+  grid-gap: 30px;
+  align-items: center;
+  justify-items: center;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
+@media only screen and (max-width: 767px) {
+  .carousel-item * {
+    grid-column: 1/3;
+  }
+}
+
+.blog-list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(minmax(auto));
+  grid-gap: 30px;
   align-items: center;
 }
-.card .card-body, .card .card-header {
-  padding: 20px;
+.blog-list .title {
+  grid-column: 1/5;
 }
-.card p {
-  display: none;
+@media only screen and (max-width: 767px) {
+  .blog-list * {
+    grid-column: 1/5;
+  }
 }
-.card:hover p {
-  display: block;
+
+.blog {
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  transform: scale(0.9, 0.9);
+}
+.blog h3, .blog p {
+  padding: 10px 20px;
+}
+.blog p {
+  font-weight: 300;
+  color: #6c757d;
+}
+.blog h3 {
+  color: #007bff;
+}
+.blog small {
+  text-align: right;
+}
+.blog img:hover {
+  transform: scale(1.2, 1.2);
+  margin-bottom: 10px;
+}
+
+.product {
+  text-align: center;
+  transform: scale(0.8, 0.8);
+}
+.product img {
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
+.product img:hover {
+  transform: scale(1.2, 1.2);
+}
+.product h3, .product p {
+  padding: 10px 30px;
+}
+.product p {
+  font-weight: 300;
+}
+.product .me {
+  text-decoration-line: line-through;
+  font-weight: 200;
+  color: #6c757d;
+}
+
+.service {
+  text-align: center;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+  padding: 20px 0;
+  border-radius: 10px;
+  transition: 1s;
+}
+.service:hover {
+  transform: scale(1.2, 1.2);
+}
+.service:hover .circle {
+  background-color: white;
+  color: #007bff;
+  border-style: dashed;
+}
+.service .circle {
+  display: grid;
+  align-content: center;
+  margin: 0 auto;
+  width: 100px;
+  height: 100px;
+  border: 8px inset #007bff;
+  border-radius: 50%;
+  font-size: 1.5em;
+}
+
+.team {
+  text-align: center;
+}
+.team img {
+  width: 25%;
+  border-radius: 50%;
+}
+
+address p {
+  font-weight: 200;
 }
 
 .about-preview {
@@ -168,7 +323,7 @@ button {
   border-radius: 5px;
 }
 .about-preview .body {
-  grid-column: 1/4;
+  grid-column: 1/5;
   align-self: center;
 }
 .about-preview .body img {
@@ -182,14 +337,14 @@ button {
   font-size: smaller;
 }
 .about-preview .details {
-  align-self: center;
-  grid-column: 4/13;
+  grid-column: 5/13;
 }
 .about-preview .details h2 {
-  color: rgba(15, 79, 199, 0.897);
+  color: #007bff;
 }
 .about-preview .details p {
-  color: #5c5959;
+  font-weight: 200;
+  font-size: 1.2em;
 }
 @media only screen and (max-width: 767px) {
   .about-preview .body, .about-preview .details {
@@ -198,6 +353,8 @@ button {
 }
 @media only screen and (min-width: 768px) {
   .about-preview {
+    width: 80%;
+    margin: 0 auto;
     padding: 20px;
     box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
   }
@@ -222,198 +379,324 @@ button {
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(minmax(auto));
   text-align: right;
-  border-right: 5px solid rgba(15, 79, 199, 0.897);
+  border-right: 5px solid #007bff;
 }
 .skills-card .front ul {
   grid-column: 1/13;
 }
 .skills-card .back {
   grid-column: 2/3;
-  border-left: 5px solid rgba(15, 79, 199, 0.897);
+  border-left: 5px solid #007bff;
 }
 .skills-card li, .skills-card .grid-title {
   padding: 6px;
 }
 
-form {
-  padding: 30px 20px;
-}
-form .input {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: repeat(minmax(auto));
-  grid-gap: 10px;
-}
-form input, form textarea {
-  margin: 8px 0;
-  padding: 10px;
-  font-size: 16px;
-  border: 1px solid #b3b1b1;
-  border-radius: 5px;
-}
-form .btn-group {
-  text-align: center;
-}
-
-.contact-card {
-  background-color: #fff;
-  color: #010118;
+.works {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(minmax(auto));
-}
-@media only screen and (max-width: 767px) {
-  .contact-card {
-    display: block;
-  }
-}
-.contact-card p {
-  font-size: 18px;
-  font-weight: 200;
-  color: #2f2d2d;
-}
-.contact-card .title {
-  padding: 10px 0;
-  color: #046fe9;
-}
-.contact-card .body {
-  padding: 30px 10px;
-}
-.contact-card ul {
-  padding: 20px 0;
-  font-weight: 100;
-  color: #2f2d2d;
-}
-.contact-card ul li span {
-  padding-left: 10px;
-}
-
-.social-link {
-  padding: 30px 0;
-}
-.social-link a {
-  padding: 8px;
-}
-
-header {
-  position: fixed;
-  background-color: rgba(10, 80, 209, 0.897);
-  color: #fff;
-  box-shadow: 0 5px 15px #c3c0c0;
-  font-size: 80%;
-  z-index: 1000;
-}
-
-nav {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(minmax(auto));
+  grid-gap: 30px;
   align-items: center;
 }
-nav .btn-menu {
-  justify-self: flex-end;
-}
-nav #navBar {
-  display: none;
-  text-transform: uppercase;
+.works .title {
+  grid-column: 1/5;
 }
 @media only screen and (max-width: 767px) {
-  nav .logo {
-    grid-column: 1/12;
-  }
-  nav #navBar {
-    height: 90vh;
-    grid-column: 1/13;
-    grid-row: 2;
-  }
-  nav .nav-bar {
-    height: 100%;
-    text-align: center;
-    background-color: #fff;
-    color: rgba(15, 79, 199, 0.897);
-  }
-  nav .nav-bar li {
-    padding: 30px;
-  }
-}
-@media only screen and (min-width: 768px) {
-  nav .logo {
+  .works * {
     grid-column: 1/3;
   }
-  nav .btn-menu {
-    display: none;
-  }
-  nav #navBar {
-    display: block;
-    grid-column: 3/13;
-    grid-row-start: 1;
-    justify-self: flex-end;
-  }
-  nav .nav-bar {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(minmax(auto));
-  }
-  nav .nav-bar li:last-child {
-    justify-self: flex-end;
-  }
 }
 
-.hero-banner {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(minmax(auto));
-  grid-template-rows: repeat(3, 1fr);
-  align-items: center;
-  height: 100vh;
+.work {
+  margin: 10px 0;
+  padding: 10px 0;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+  background-color: rgba(231, 225, 225, 0.863);
+  color: #007bff;
 }
-.hero-banner h3, .hero-banner p {
-  margin-top: 8px;
+.work ul {
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px;
 }
-.hero-banner img {
-  width: 25%;
-  border-radius: 50%;
-}
-.hero-banner h3 {
-  color: rgba(15, 79, 199, 0.897);
-}
-.hero-banner p {
-  color: #5c5959;
-}
-.hero-banner .hero-body {
-  grid-column: 1/7;
-  grid-row: 2;
-  text-align: center;
+.work ul li {
+  margin: 5px;
+  padding: 6px;
+  background-color: #6c757d;
+  color: white;
+  border-radius: 5px;
 }
 
-#work {
-  background-color: rgba(10, 80, 209, 0.02);
-  color: black;
+form {
+  padding: 20px;
 }
-#work .row-content {
+form .form-element {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(minmax(auto));
-  grid-gap: 10px;
+  grid-gap: 5px;
+  font-weight: 200;
+  font-size: 14px;
+  margin: 10px 0;
+}
+form label {
+  grid-column: 1/2;
+  align-self: flex-start;
+  padding: 10px;
+}
+form input, form textarea {
+  margin: 0;
+  grid-column: 2/5;
+  padding: 10px;
+  border: 1px solid rgba(179, 177, 177, 0.863);
+  border-radius: 5px;
+}
+form .btn-group {
+  text-align: right;
 }
 @media only screen and (max-width: 767px) {
-  #work .row-content {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(minmax(auto));
+  form label {
+    display: none;
   }
+  form input, form textarea {
+    grid-column: 1/5;
+  }
+}
+
+header, section, .container, nav {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.container {
+  max-width: 1060px;
+  margin: 0 auto;
+  padding: 12px;
+}
+
+section {
+  padding: 40px 0;
+}
+section .section-title {
+  margin: 30px auto;
+  max-width: 100px;
+  text-align: center;
+}
+section:hover .section-title {
+  border-bottom: 5px solid #007bff;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.row-content {
+  margin: 40px 0;
+  padding: 40px 0;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+@media only screen and (max-width: 800px) {
+  .col-md-1 {
+    width: 8.33333333%;
+  }
+
+  .col-md-2 {
+    width: 16.66666667%;
+  }
+
+  .col-md-3 {
+    width: 25%;
+  }
+
+  .col-md-4 {
+    width: 33.33333333%;
+  }
+
+  .col-md-5 {
+    width: 41.66666667%;
+  }
+
+  .col-md-6 {
+    width: 50%;
+  }
+
+  .col-md-7 {
+    width: 58.33333333%;
+  }
+
+  .col-md-8 {
+    width: 66.66666667%;
+  }
+
+  .col-md-9 {
+    width: 75%;
+  }
+
+  .col-md-10 {
+    width: 83.33333333%;
+  }
+
+  .col-md-11 {
+    width: 91.66666667%;
+  }
+
+  .col-md-12 {
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 800px) {
+  .col-lg-1 {
+    width: 8.33333333%;
+  }
+
+  .col-lg-2 {
+    width: 16.66666667%;
+  }
+
+  .col-lg-3 {
+    width: 25%;
+  }
+
+  .col-lg-4 {
+    width: 33.33333333%;
+  }
+
+  .col-lg-5 {
+    width: 41.66666667%;
+  }
+
+  .col-lg-6 {
+    width: 50%;
+  }
+
+  .col-lg-7 {
+    width: 58.33333333%;
+  }
+
+  .col-lg-8 {
+    width: 66.66666667%;
+  }
+
+  .col-lg-9 {
+    width: 75%;
+  }
+
+  .col-lg-10 {
+    width: 83.33333333%;
+  }
+
+  .col-lg-11 {
+    width: 91.66666667%;
+  }
+
+  .col-lg-12 {
+    width: 100%;
+  }
+}
+header {
+  position: fixed;
+  background-color: white;
+  color: #007bff;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+  z-index: 100;
+}
+header .btn-menu {
+  display: none;
+}
+header nav {
+  display: block;
+}
+header .nav-bars {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(minmax(auto));
+  justify-items: flex-end;
+  align-items: center;
+}
+@media only screen and (max-width: 767px) {
+  header .btn-menu {
+    display: block;
+    float: right;
+  }
+  header nav {
+    display: none;
+  }
+  header .nav-bars {
+    display: block;
+    height: 100vh;
+  }
+  header .nav-bars .nav-item, header .nav-bars .nav-down {
+    padding: 20px;
+    cursor: pointer;
+  }
+}
+
+main {
+  margin-top: 40px;
+}
+
+#hero {
+  background-color: #007bff;
+  color: white;
+  text-align: center;
+}
+#hero p {
+  font-size: 2em;
+}
+#hero .row {
+  height: 80vh;
+}
+
+.breadcrumbs {
+  display: flex;
+  padding: 10px;
+  font-size: 90%;
+  font-weight: 200;
+  background-color: #e9ecef;
+  color: #6c757d;
+}
+.breadcrumbs li {
+  padding: 0 5px;
 }
 
 footer {
-  background-color: rgba(11, 97, 255, 0.815);
-  color: #fff;
+  background-color: #007bff;
+  color: white;
+}
+footer p {
+  font-size: 1.2em;
+  font-weight: 300;
 }
 footer .copyright {
+  background-color: white;
+  color: black;
+  padding: 10px;
   text-align: center;
-  padding: 20px;
-  font-weight: bold;
-  background-color: #ece6e6;
-  color: rgba(15, 79, 199, 0.897);
+}
+
+footer {
+  background-color: #007bff;
+  color: white;
+}
+footer p {
+  font-size: 1.2em;
+  font-weight: 300;
+}
+footer .copyright {
+  background-color: white;
+  color: black;
+  padding: 10px;
+  text-align: center;
 }
 
 /*# sourceMappingURL=styles.css.map */
