--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -1,13 +1,29 @@
 @import "mixins";
+
 main{
-    margin-top: 40px;
+    margin-top: 100vh;
 }
 //hero
 #hero{
-    @include set-bg-color($primary,white);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 999;
     text-align: center;
+    background: white;
     p{font-size: 2em;}
-    .row{ height: 80vh; }
+    .title{
+        font-size: 4em;
+        font-family: cursive;
+    }
+    .hero{
+        opacity: 0;
+        background: linear-gradient(to bottom,$primary,$danger);
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+    }
 }
 //breadcrumbs
 .breadcrumbs{
