--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,15 +60,23 @@ p {
   color: white;
 }
 
-#buy {
-  position: fixed;
-  bottom: 100px;
-  right: 20px;
-  padding: 10px;
+.social-media {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social-media li {
+  margin: 30px 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #007bff;
   border-radius: 50%;
-  background-color: #28a745;
-  color: white;
-  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
+.social-media li:hover {
+  border-width: 2px;
 }
 
 .btn-group, .btn-group-rt, .btn-group-lt {
@@ -496,6 +504,9 @@ section:hover .section-title {
   display: flex;
   flex-wrap: wrap;
 }
+.row .col {
+  width: 100%;
+}
 
 .row-content {
   margin: 40px 0;
@@ -647,19 +658,31 @@ header .nav-bars {
 }
 
 main {
-  margin-top: 40px;
+  margin-top: 100vh;
 }
 
 #hero {
-  background-color: #007bff;
-  color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 999;
   text-align: center;
+  background: white;
 }
 #hero p {
   font-size: 2em;
 }
-#hero .row {
-  height: 80vh;
+#hero .title {
+  font-size: 4em;
+  font-family: cursive;
+}
+#hero .hero {
+  opacity: 0;
+  background: linear-gradient(to bottom, #007bff, #dc3545);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
 
 .breadcrumbs {
