--- a/assets/css/_rest.scss
+++ b/assets/css/_rest.scss
@@ -1,8 +1,12 @@
 
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Asap&family=Cedarville+Cursive&family=Open+Sans:ital,wght@0,300;1,300&display=swap");
 * {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+     font-family: 'Open Sans', sans-serif;
+    //  font-family: 'Asap', sans-serif;
+    // font-family: 'Cedarville Cursive', cursive;
+    // font-family: 'Amatic SC', cursive;
 }
 a{
     text-decoration: none;
