--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -663,6 +663,28 @@ section:hover .section-title {
     width: 100%;
   }
 }
+.reveal {
+  opacity: 0;
+}
+
+.reveal.active {
+  opacity: 1;
+}
+
+.active.fade-in {
+  animation: fade-in 1s ease-in;
+}
+
+@keyframes fade-in {
+  0% {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 header {
   position: fixed;
   background-color: white;
