--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -68,3 +68,26 @@ section{
     .col-lg-12 { width: 100% }
  }
  
+
+ //fade in and out
+.reveal {
+    opacity: 0;
+  }
+  
+  .reveal.active {
+    opacity: 1;
+  }
+  .active.fade-in {
+    animation: fade-in 1s ease-in;
+  }
+  @keyframes fade-in {
+    0% {
+      transform: translateY(-50px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  
