--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,10 +1,11 @@
-@use "rest";
-@use "tags";
-@use "buttons";
-@use "card";
-@use "forms";
-@use "modal";
-@use "layout";
-@use "header";
-@use "main";
-@use "footer";
+@use './base/rest';
+@use './base/colors';
+@use './layout/typography';
+@use './components/responsive';
+@use './layout/header';
+@use './layout/main';
+@use './layout/footer';
+@use './components/tags';
+@use './components/cards';
+@use './components/forms';
+@use './components/buttons';
