--- a/assets/css/base/_mixins.scss
+++ b/assets/css/base/_mixins.scss
@@ -1,9 +1,3 @@
-//Main colors
-$primary : #007bff;
-$detail : #6c757d;
-$warning : #ffc107;
-$danger : #dc3545;
-$success : #28a745;
 
 //Background mixins
 @mixin set-bg-color($bg-color,$text-color) {
@@ -20,32 +14,41 @@ $success : #28a745;
 
 // Light box shadow
 @mixin box-shadow {
-    box-shadow:  1px 3px 5px rgba(0,0,0,0.1);
+    box-shadow:  4px 12px 20px rgba(0,0,0,0.1);
  }
  
 // Media quries
 @mixin respond ($breakpoint) {
 
     @if $breakpoint==laptop {
-        @media only screen and (min-width: 768px) {
+        @media only screen and (min-width: 769px) {
+        @content;
+        }
+    }
+
+    @if $breakpoint==tablet {
+        @media only screen and (min-width: 540px) and (max-width: 768px) {
         @content;
         }
     }
 
     @if $breakpoint==mobile {
-        @media only screen and (max-width: 767px) {
+        @media only screen and (min-width: 280px) and (max-width: 539px) {
         @content;
         }
     }
 }
 
 // button mixin
-@mixin button-bg($bg) {
-    color:white;
+@mixin btn($bg) {
     text-decoration:none;
-    padding:8px 10px;
+    padding:8px 12px;
+    border: none;
     border-radius:3px;
+    color:white;
     background: $bg;
+    cursor: pointer;
+    transition: 0.2s;
     @include box-shadow;
     &:hover {
         border: 1px solid $bg;
